--- a/src/classes/AccountManager.cls
+++ b/src/classes/AccountManager.cls
@@ -1,14 +1,16 @@
+// This is a commit commit
 @RestResource(urlMapping='/Accounts/*/contacts')
 global with sharing class AccountManager {
     @HttpGet
     global static Account getAccount() {
         Vehicle__c vehicle = new Vehicle__c();
         vehicle.VIN_Number__c = 'testVinNumber';
+        vehicle.DistanceTravelled__c= '100';
         RestRequest req = RestContext.request;
         String accId = req.requestURI.substringBetween('Accounts/', '/contacts');
         Account acc = [
-            SELECT Id, Name, (SELECT Id, Name FROM Contacts)
-            FROM Account WHERE Id = :accId
+                SELECT Id, Name, (SELECT Id, Name FROM Contacts)
+                FROM Account WHERE Id = :accId
         ];
         return acc;
     }
