--- a/src/classes/AccountManager.cls
+++ b/src/classes/AccountManager.cls
@@ -5,6 +5,7 @@ global with sharing class AccountManager {
     global static Account getAccount() {
         Vehicle__c vehicle = new Vehicle__c();
         vehicle.VIN_Number__c = 'testVinNumber';
+        vehicle.NumberCheck__c = 'testNumberCheck';
         RestRequest req = RestContext.request;
         String accId = req.requestURI.substringBetween('Accounts/', '/contacts');
         Account acc = [
